Fix broken css rule

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -333,9 +333,13 @@
     color: $green-dark;
     font-size: 11px;
     font-weight: bold;
-    padding: 3px0;
+    padding-top: 13px;
     text-shadow: 0 1px 0 rgba(255, 255, 255, .5);
     text-transform: uppercase;
+
+    &:first-child {
+      padding-top: 0;
+    }
   }
 }
 
